fix overflow: auto;

--- a/styles/autohide-tree-view.less
+++ b/styles/autohide-tree-view.less
@@ -6,7 +6,7 @@
     flex: 1;
     min-width: 0; // allow the tree view to hide completely
     z-index: 100; // above the text-editor scrollbar
-    overflow: visible; // hover-handle is outside of the tree view
+    overflow: auto; // hover-handle is outside of the tree view
 
     &[data-show-on-right-side="true"] {
       right: 0; // without this the tree view will slide off-screen
